stop dark shadow from only covering a small portion of the tab

--- a/skin/base.css
+++ b/skin/base.css
@@ -78,7 +78,6 @@
 
 .tabbrowser-tab {
   position: relative;
-  min-width: 30px !important;
   max-width: 100% !important;
   box-shadow: 0 0 0 var(--color-blue) inset;
   pointer-events: auto !important;
